// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form/> should render with preloaded data 1`] = `
<div>
  <div
    class="modal-header"
  >
    <h5
      class="modal-title"
    >
      Configure HTTP action
    </h5>
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <form
    class=""
  >
    <div
      class="modal-body"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-label"
        >
          Button title
        </label>
        <div
          class=""
        >
          <input
            class="form-control"
            id="id-label"
            required=""
            type="text"
            value="label"
          />
        </div>
      </div>
      <div
        class="http"
      >
        <div
          class="formParamRow"
        >
          <div
            class="formParamCol"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-method"
              >
                Method
              </label>
              <div
                class=""
              >
                <select
                  class="form-control"
                  id="id-method"
                  required=""
                >
                  <option
                    value="GET"
                  >
                    GET
                  </option>
                  <option
                    value="POST"
                  >
                    POST
                  </option>
                  <option
                    value="PUT"
                  >
                    PUT
                  </option>
                  <option
                    value="DELETE"
                  >
                    DELETE
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="formParamCol"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-url"
              >
                URL
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-url"
                  pattern="*"
                  required=""
                  type="text"
                  value="www.someurl.com"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3 form-group"
        >
          <label
            class="control-label"
          >
            Headers
          </label>
          <div>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              <i
                class="material-icons formParamIcon"
              >
                add
              </i>
            </button>
          </div>
        </div>
        <div
          class="mt-3 form-group"
        >
          <label
            class="control-label"
          >
            Parameters
          </label>
          <div>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              <i
                class="material-icons formParamIcon"
              >
                add
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="mr-2 btn btn-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`<Form/> should render without any data 1`] = `
<div>
  <div
    class="modal-header"
  >
    <h5
      class="modal-title"
    >
      Configure HTTP action
    </h5>
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <form
    class=""
  >
    <div
      class="modal-body"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-label"
        >
          Button title
        </label>
        <div
          class=""
        >
          <input
            class="form-control"
            id="id-label"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="http"
      >
        <div
          class="formParamRow"
        >
          <div
            class="formParamCol"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-method"
              >
                Method
              </label>
              <div
                class=""
              >
                <select
                  class="form-control"
                  id="id-method"
                  required=""
                >
                  <option
                    value="GET"
                  >
                    GET
                  </option>
                  <option
                    value="POST"
                  >
                    POST
                  </option>
                  <option
                    value="PUT"
                  >
                    PUT
                  </option>
                  <option
                    value="DELETE"
                  >
                    DELETE
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="formParamCol"
          >
            <div
              class="InputField required form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-url"
              >
                URL
              </label>
              <div
                class=""
              >
                <input
                  class="form-control"
                  id="id-url"
                  pattern="*"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3 form-group"
        >
          <label
            class="control-label"
          >
            Headers
          </label>
          <div>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              <i
                class="material-icons formParamIcon"
              >
                add
              </i>
            </button>
          </div>
        </div>
        <div
          class="mt-3 form-group"
        >
          <label
            class="control-label"
          >
            Parameters
          </label>
          <div>
            <button
              class="btn btn-secondary btn-sm"
              type="button"
            >
              <i
                class="material-icons formParamIcon"
              >
                add
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="mr-2 btn btn-secondary"
        type="button"
      >
        Cancel
      </button>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;
